# training-matrix

./: .env.example  .gitignore  AUDIT_COMPLETE.md  AUDIT_SUMMARY.md  BUILD_REVIEW_AND_IMPROVEMENTS.md  CHANGED_FILES.md  CODEBASE_REVIEW.md  COMPLETE_FIX_PLAN.md  COMPREHENSIVE_AUDIT_REPORT.md  CRITICAL_FIXES.md  DATABASE_SETUP.md  DATA_IMPORT_GUIDE.md  DEPLOYMENT_GUIDE.md  IMPROVEMENT_PLAN.md  INSTALLATION.md  MACOS_BUILD_GUIDE.md  QT_INSTALLATION_GUIDE.md  QUICKSTART_DATABASE.md  QUICK_START.md  README.md  README_AUDIT.md  REVIEW_SUMMARY.md  SETUP_INSTRUCTIONS.md  SIMPLE_INSTALL.md  SQL_SERVER_INTEGRATION.md  SQL_SERVER_SETUP.md  SUPER_EASY_INSTALL.md  SYSTEM_REVIEW_REPORT.md  TESTING_SQL_INTEGRATION.md  TESTING_SUMMARY.md  USEDATA_FIXES.md  VISUAL_STUDIO_MAC_GUIDE.md  WINDOWS_BUILD_GUIDE.md  copy-fixes.sh  import-data.cjs  index.html  insert_core_skills.sql  package-lock.json  package.json  phase1-fixes.patch  (+8 more)
cpp-skill-matrix/: .gitignore  BEFORE_AFTER_COMPARISON.md  BUILD_AND_TEST.md  CMakeLists.txt  DEVELOPER_GUIDE.md  IMPLEMENTATION_STATUS.md  OVERHAUL_SUMMARY.md  PROJECT_STATUS.md  README.md
cpp-skill-matrix/resources/: Info.plist  create_icns.sh  resources.qrc
cpp-skill-matrix/resources/database/: add-multi-criteria-weighting.sql  fix-core-skills-schema.sql  migrate-add-core-skills.sql  schema.sql  seed-data-simple.sql  seed-production-areas.sql
cpp-skill-matrix/resources/images/: README.md
cpp-skill-matrix/resources/styles/: dark.qss  light.qss
cpp-skill-matrix/src/: main.cpp
cpp-skill-matrix/src/controllers/: AnalyticsController.cpp  AnalyticsController.h  AssessmentController.cpp  AssessmentController.h  AuthController.cpp  AuthController.h  CertificationController.cpp  CertificationController.h  CoreSkillsController.cpp  CoreSkillsController.h  DataController.cpp  DataController.h  EngineerController.cpp  EngineerController.h  ProductionController.cpp  ProductionController.h  ReportController.cpp  ReportController.h  SnapshotController.cpp  SnapshotController.h
cpp-skill-matrix/src/core/: Application.cpp  Application.h  Constants.h  Session.cpp  Session.h
cpp-skill-matrix/src/database/: AssessmentRepository.cpp  AssessmentRepository.h  AuditLogRepository.cpp  AuditLogRepository.h  CertificationRepository.cpp  CertificationRepository.h  CoreSkillsRepository.cpp  CoreSkillsRepository.h  DatabaseManager.cpp  DatabaseManager.h  EngineerRepository.cpp  EngineerRepository.h  ProductionRepository.cpp  ProductionRepository.h  SnapshotRepository.cpp  SnapshotRepository.h  UserRepository.cpp  UserRepository.h
cpp-skill-matrix/src/models/: Assessment.cpp  Assessment.h  AuditLog.cpp  AuditLog.h  Certification.cpp  Certification.h  Competency.cpp  Competency.h  CoreSkill.cpp  CoreSkill.h  CoreSkillAssessment.cpp  CoreSkillAssessment.h  CoreSkillCategory.cpp  CoreSkillCategory.h  Engineer.cpp  Engineer.h  Machine.cpp  Machine.h  ProductionArea.cpp  ProductionArea.h  Snapshot.cpp  Snapshot.h  User.cpp  User.h
cpp-skill-matrix/src/ui/: AnalyticsWidget.cpp  AnalyticsWidget.h  AptitudeLogoWidget.cpp  AptitudeLogoWidget.h  AssessmentWidget.cpp  AssessmentWidget.h  AuditLogWidget.cpp  AuditLogWidget.h  CertificationsWidget.cpp  CertificationsWidget.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  CoreSkillsManagementWidget.cpp  CoreSkillsManagementWidget.h  CoreSkillsWidget.cpp  CoreSkillsWidget.h  DashboardWidget.cpp  DashboardWidget.h  DatabaseConnectionDialog.cpp  DatabaseConnectionDialog.h  EngineersWidget.cpp  EngineersWidget.h  ImportExportDialog.cpp  ImportExportDialog.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MyAssessmentsWidget.cpp  MyAssessmentsWidget.h  MyCoreSkillsWidget.cpp  MyCoreSkillsWidget.h  MyDashboardWidget.cpp  MyDashboardWidget.h  MyProgressWidget.cpp  MyProgressWidget.h  ProductionAreasWidget.cpp  ProductionAreasWidget.h  ReportsWidget.cpp  ReportsWidget.h  (+8 more)
cpp-skill-matrix/src/ui/widgets/: ChartWidget.cpp  ChartWidget.h  ScoreEditor.cpp  ScoreEditor.h  SearchBar.cpp  SearchBar.h  TreeView.cpp  TreeView.h
cpp-skill-matrix/src/utils/: Config.cpp  Config.h  Crypto.cpp  Crypto.h  DateTimeHelper.cpp  DateTimeHelper.h  EXCEL_README.md  ExcelExporter.cpp  ExcelExporter.h  ExcelImporter.cpp  ExcelImporter.h  IconProvider.cpp  IconProvider.h  JsonHelper.cpp  JsonHelper.h  Logger.cpp  Logger.h  ValidationHelper.cpp  ValidationHelper.h
database/: config.cjs  config.example.js  connection.cjs  connection.js  import-from-json.cjs  install-all.js  install-core-skills.js  install-production-areas.js  queries.js  run-schema.cjs  schema.sql  setup-database.js  test-connection.js
database/core-skills/: README.md  electrical-skills.sql  mechanical-skills.sql  software-skills.sql
database/production-areas/: README.md  line7-filling.sql  line7-packing.sql  line7-tank-room.sql
public/: manifest.json  sw.js
scripts/: README.md  engineers.sql  import-engineers-api.cjs  import-engineers.cjs
server/: add-sample-data.js  index.cjs  package.json  setup-database-simple.js  setup-database.js  validation.cjs
server/config/: database.js
server/db/: connection.js  schema.sql
src/: App.jsx  main.jsx
src/components/: AdvancedAnalytics.jsx  CoreSkills.jsx  Dashboard.jsx  EngineerAnalysis.jsx  Login.jsx  ProgressGraph.jsx
src/components/admin/: ProductionAreaManager.jsx
src/contexts/: ThemeContext.jsx
src/hooks/: useAuth.js  useData.js
src/utils/: api-ORIGINAL.js  api.js  excelExport.js  excelImport.js  storage.js
